<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      >

        <com.bittechnologies.bapsquiz.custom.GridViewCompat
            android:id="@+id/grid_chapter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:gravity="center"
            android:horizontalSpacing="2.0dip"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="2.0dip" />

        <TextView
            android:id="@+id/tvNoDataFound"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="101.0dip"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/no_data_table_fragment"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_go_to_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="141.0dip"
            android:background="@drawable/btn_view_by_months_years"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/go_to_calc"
            android:textColor="@android:color/white"
            android:visibility="gone" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </RelativeLayout>







</FrameLayout>